--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,17 +36,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Create Git tag
+      run: |
+        TAG="v${{ github.run_number }}"
+        git tag $TAG
+        git push origin $TAG
+
     - name: Upload JAR to GitHub Releases
       uses: softprops/action-gh-release@v1
       with:
         files: build/libs/*.jar  # Adjust the path to your JAR files
-
-    - name: Create Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        curl -X POST -H "Authorization: token $GITHUB_TOKEN" \
-        -d '{"tag_name": "v${{ github.run_number }}", "name": "Release v${{ github.run_number }}", "body": "Automated release of the project."}' \
-        https://api.github.com/repos/${{ github.repository }}/releases
+
 
          
