--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,10 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      run: ./gradlew build
+      run:  |
+            ls -lhsa
+            ./gradlew build 
+            ls -lhsa
 
 
     - name: Build and Push Docker Image
