--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-name: Java CI with Gradle
-
+name: Java CI with Gradle and Docker
 
 on:
   push:
@@ -12,27 +11,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    # Step 1: Checkout the code
+    - name: Checkout code
+      uses: actions/checkout@v2
 
+    # Step 2: Set up JDK 1.8
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
 
+    # Step 3: Grant execute permission for gradlew
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    # Step 4: Build the Java project using Gradle
     - name: Build with Gradle
-      run:  |
-            ls -lhsa
-            ./gradlew build 
-            ls -lhsa
+      run: |
+        ./gradlew clean build
+        ls -lh build/libs/
 
+    # Step 5: Upload the generated JAR as an artifact (optional, for debugging or future reuse)
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: java-app-jar
+        path: build/libs/*.jar
 
+    # Step 6: Build and push Docker image
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image: ayagallal/tutorial  
+        image: ayagallal/tutorial
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}     
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        buildArgs: JAR_FILE=build/libs/*.jar
+    
